[gd_scene load_steps=3 format=2]

[ext_resource path="res://ui/ActionSelector/ActionButtons.gd" type="Script" id=1]
[ext_resource path="res://theme.tres" type="Theme" id=4]

[node name="PanelContainer" type="HBoxContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -23.0
margin_top = -20.0
margin_right = 23.0
margin_bottom = 21.0
size_flags_horizontal = 12
size_flags_vertical = 12
theme = ExtResource( 4 )
alignment = 1
script = ExtResource( 1 )

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_right = 46.0
margin_bottom = 41.0
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="CategoryContainer" type="HBoxContainer" parent="PanelContainer"]
unique_name_in_owner = true
margin_left = 1.0
margin_top = 1.0
margin_right = 45.0
margin_bottom = 40.0
size_flags_horizontal = 0
size_flags_vertical = 3
custom_constants/separation = -1
alignment = 2

[node name="TurnButtons" type="VBoxContainer" parent="PanelContainer/CategoryContainer"]
unique_name_in_owner = true
margin_right = 44.0
margin_bottom = 39.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SelectButton" type="Button" parent="PanelContainer/CategoryContainer/TurnButtons"]
unique_name_in_owner = true
margin_right = 44.0
margin_bottom = 12.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
theme = ExtResource( 4 )
theme_type_variation = "SelectButton"
text = "Submit"

[node name="Padding" type="Control" parent="PanelContainer/CategoryContainer/TurnButtons"]
margin_top = 13.0
margin_right = 44.0
margin_bottom = 13.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 11

[node name="ContinueButton" type="Button" parent="PanelContainer/CategoryContainer/TurnButtons"]
unique_name_in_owner = true
margin_top = 14.0
margin_right = 44.0
margin_bottom = 26.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
text = "Continue"

[node name="UndoButton" type="Button" parent="PanelContainer/CategoryContainer/TurnButtons"]
unique_name_in_owner = true
margin_top = 27.0
margin_right = 44.0
margin_bottom = 39.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
text = "Undo"
